--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
   "dependencies": {},
   "devDependencies": {
     "bootstrap": "^4.0.0-alpha.6",
+    "connect": "^3.5.0",
     "gulp": "^3.9.1",
     "gulp-browserify": "^0.5.1",
     "gulp-sass": "^3.1.0",
+    "serve-static": "^1.11.1",
+    "tether": "^1.4.0",
     "typicons.font": "^2.0.8"
   }
 }
