Node packages dependencies, install svgstore

--- a/package.json
+++ b/package.json
@@ -16,15 +16,17 @@
     "url": "https://github.com/guoyunhe/chameleon/issues"
   },
   "homepage": "https://github.com/guoyunhe/chameleon#readme",
-  "dependencies": {},
-  "devDependencies": {
+  "dependencies": {
     "bootstrap": "^4.0.0-alpha.6",
+    "tether": "^1.4.0",
+    "typicons.font": "^2.0.8"
+  },
+  "devDependencies": {
     "connect": "^3.5.0",
     "gulp": "^3.9.1",
     "gulp-browserify": "^0.5.1",
     "gulp-sass": "^3.1.0",
-    "serve-static": "^1.11.1",
-    "tether": "^1.4.0",
-    "typicons.font": "^2.0.8"
+    "gulp-svgstore": "^6.1.0",
+    "serve-static": "^1.11.1"
   }
 }
