app-no-jquery.js

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/guoyunhe/chameleon#readme",
   "dependencies": {
     "bootstrap": "^4.0.0-alpha.6",
+    "jquery": "^3.2.1",
     "tether": "^1.4.0"
   },
   "devDependencies": {
