--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
   },
   "homepage": "https://github.com/guoyunhe/chameleon#readme",
   "dependencies": {
-    "bootstrap": "^4.0.0-alpha.6",
+    "bootstrap": "^4.0.0-beta.2",
     "jquery": "^3.2.1",
+    "popper.js": "^1.12.9",
     "tether": "^1.4.0"
   },
   "devDependencies": {
