--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   },
   "homepage": "https://github.com/guoyunhe/chameleon#readme",
   "dependencies": {
-    "bootstrap": "^4.0.0-beta.2",
-    "jquery": "^3.2.1",
+    "bootstrap": "^4.1.0",
+    "jquery": "^3.3.1",
     "popper.js": "^1.12.9",
     "tether": "^1.4.0"
   },
