--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "bootstrap": "^4.1.1",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.3",
-    "tether": "^1.4.0"
+    "tether": "^1.4.0",
+    "typicons.font": "^2.0.9"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
