--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "browserify": "^16.2.2",
     "gulp": "^4.0.0",
+    "gulp-autoprefixer": "^5.0.0",
     "gulp-buffer": "0.0.2",
     "gulp-sass": "^4.0.1",
     "gulp-sourcemaps": "^2.6.4",
