--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^4.3.1",
     "jquery": "^3.3.1",
     "popper.js": "^1.15.0",
+    "sticky-scroller": "^0.4.0",
     "tether": "^1.4.0"
   },
   "devDependencies": {
@@ -33,7 +34,7 @@
     "gulp-sourcemaps": "^2.6.4",
     "gulp-svgmin": "^2.2.0",
     "gulp-tap": "^1.0.1",
-    "gulp-uglify": "^3.0.0",
+    "gulp-uglify-es": "^1.0.4",
     "gulplog": "^1.0.0"
   }
 }
