--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp-autoprefixer": "^5.0.0",
     "gulp-buffer": "0.0.2",
     "gulp-connect": "^5.7.0",
+    "gulp-pug": "^4.0.1",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-svgmin": "^2.2.0",
