--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "gulp-pug": "^4.0.1",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.4",
+    "gulp-svg2png-update": "^2.2.1",
     "gulp-svgmin": "^2.2.0",
     "gulp-tap": "^1.0.1",
     "gulp-uglify-es": "^1.0.4",
-    "gulplog": "^1.0.0"
+    "gulplog": "^1.0.0",
+    "svg2png": "^4.1.1"
   }
 }
