--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^5.0.0",
     "gulp-buffer": "0.0.2",
+    "gulp-cli": "^2.2.0",
     "gulp-connect": "^5.7.0",
     "gulp-dart-sass": "^0.9.1",
     "gulp-open": "^3.0.1",
