--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "gulp-tap": "^1.0.1",
     "gulp-uglify-es": "^1.0.4",
     "gulplog": "^1.0.0",
+    "jstransformer-markdown-it": "^2.1.0",
     "svg2png": "^4.1.1"
   }
 }
