add remixicons and gulp-svg-sprite

--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/openSUSE/opensuse-theme-chameleon.git"
+    "url": "git+https://github.com/openSUSE/chameleon.git"
   },
   "author": "Guo Yunhe",
   "license": "GPL-3.0",
   "bugs": {
-    "url": "https://github.com/openSUSE/opensuse-theme-chameleon/issues"
+    "url": "https://github.com/openSUSE/chameleon/issues"
   },
-  "homepage": "https://github.com/openSUSE/opensuse-theme-chameleon#readme",
+  "homepage": "https://github.com/openSUSE/chameleon#readme",
   "dependencies": {
     "bootstrap": "^4.3.1",
     "cross-storage": "^1.0.0",
@@ -39,11 +39,13 @@
     "gulp-open": "^3.0.1",
     "gulp-pug": "^4.0.1",
     "gulp-sourcemaps": "^2.6.5",
+    "gulp-svg-sprite": "^1.5.0",
     "gulp-svgmin": "^2.2.0",
     "gulp-tap": "^1.0.1",
     "gulp-uglify-es": "^1.0.4",
     "gulplog": "^1.0.0",
     "jstransformer-markdown-it": "^2.1.0",
+    "remixicon": "^2.3.0",
     "svg2png": "^4.1.1"
   }
 }
