--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^4.4.1",
     "cross-storage": "^1.0.0",
     "jquery": "^3.4.1",
+    "js-cookie": "^2.2.1",
     "popper.js": "^1.16.1",
     "sticky-scroller": "^0.4.0",
     "tether": "^1.4.7"
