--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "gulp-svg-sprite": "^1.5.0",
     "gulp-tap": "^1.0.1",
     "gulp-uglify-es": "^1.0.4",
+    "gulp-wait": "0.0.2",
     "gulplog": "^1.0.0",
     "jstransformer-markdown-it": "^2.1.0",
     "remixicon": "^2.3.0"
