--- a/package.json
+++ b/package.json
@@ -22,10 +22,9 @@
   "homepage": "https://github.com/openSUSE/chameleon#readme",
   "dependencies": {
     "bootstrap": "^4.4.1",
-    "cross-storage": "^1.0.0",
     "jquery": "^3.4.1",
-    "js-cookie": "^2.2.1",
     "popper.js": "^1.16.1",
+    "remixicon": "^2.3.0",
     "sticky-scroller": "^0.4.0",
     "tether": "^1.4.7"
   },
@@ -48,7 +47,6 @@
     "gulp-uglify-es": "^1.0.4",
     "gulp-wait": "0.0.2",
     "gulplog": "^1.0.0",
-    "jstransformer-markdown-it": "^2.1.0",
-    "remixicon": "^2.3.0"
+    "jstransformer-markdown-it": "^2.1.0"
   }
 }
