new megamenu design

--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "gulp-wait": "0.0.2",
     "gulplog": "^1.0.0",
     "jquery": "^3.5.1",
-    "jstransformer-markdown-it": "^2.1.0"
+    "jstransformer-markdown-it": "^2.1.0",
+    "prettier": "^2.0.5"
   },
   "browserslist": [
     "defaults",
