--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "gulp-dart-sass": "^1.0.2",
     "gulp-open": "^3.0.1",
     "gulp-pug": "^4.0.1",
+    "gulp-rename": "^2.0.0",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-tap": "^2.0.0",
     "gulp-wait": "0.0.2",
