--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
     "jquery": "^3.5.1"
   },
   "devDependencies": {
-    "bootstrap": "^4.5.0",
-    "bootstrap-icons": "^1.0.0-alpha4",
-    "browserify": "^16.5.1",
+    "bootstrap": "^4.5.2",
+    "bootstrap-icons": "^1.0.0",
+    "browserify": "^16.5.2",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
     "gulp-buffer": "0.0.2",
@@ -45,10 +45,10 @@
     "gulp-tap": "^2.0.0",
     "gulp-wait": "0.0.2",
     "gulplog": "^1.0.0",
-    "highlight.js": "^10.1.1",
+    "highlight.js": "^10.2.0",
     "jquery": "^3.5.1",
     "jstransformer-markdown-it": "^2.1.0",
-    "prettier": "^2.0.5"
+    "prettier": "^2.1.2"
   },
   "browserslist": [
     "defaults",
