--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@opensuse/chameleon",
-  "version": "2.0.0",
+  "version": "4.0.0",
   "description": "openSUSE Design System for Web",
   "main": "dist/js/chameleon.js",
   "module": "src/js/chameleon.js",
@@ -8,7 +8,7 @@
   "style": "dist/css/chameleon.css",
   "scripts": {
     "start": "gulp watch",
-    "build": "gulp build",
+    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,29 +25,22 @@
     "sticky-scroller": "^0.4.0"
   },
   "peerDependencies": {
-    "bootstrap": "^4.5.0",
-    "jquery": "^3.5.1"
+    "bootstrap": "^5.0.0-beta2",
+    "bootstrap-icons": "^1.3.0"
   },
   "devDependencies": {
-    "bootstrap": "^4.6.0",
+    "bootstrap": "^5.0.0-beta2",
     "bootstrap-icons": "^1.3.0",
-    "browserify": "^17.0.0",
-    "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^7.0.1",
-    "gulp-buffer": "0.0.2",
-    "gulp-cli": "^2.3.0",
-    "gulp-connect": "^5.7.0",
-    "gulp-dart-sass": "^1.0.2",
-    "gulp-open": "^3.0.1",
-    "gulp-pug": "^4.0.1",
-    "gulp-rename": "^2.0.0",
-    "gulp-sourcemaps": "^3.0.0",
-    "gulp-tap": "^2.0.0",
-    "gulp-wait": "0.0.2",
-    "gulplog": "^1.0.0",
-    "jquery": "^3.5.1",
-    "jstransformer-markdown-it": "^2.1.0",
-    "prettier": "^2.2.1"
+    "copy-webpack-plugin": "^7.0.0",
+    "eslint": "^7.20.0",
+    "prettier": "^2.2.1",
+    "raw-loader": "^4.0.2",
+    "sass": "^1.32.7",
+    "sass-loader": "^11.0.1",
+    "style-loader": "^2.0.0",
+    "stylelint": "^13.10.0",
+    "webpack": "^5.22.0",
+    "webpack-cli": "^4.5.0"
   },
   "browserslist": [
     "defaults",
